--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,6 +31,24 @@ on:
 name: Deploy to Amazon ECS
 
 jobs:
+  build:
+
+  name: Generate APK
+  runs-on: ubuntu-latest
+
+  steps:
+    - uses: actions/checkout@v1
+    - name: set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Build debug APK
+      run: bash ./gradlew assembleDebug --stacktrace
+    - name: Upload APK
+      uses: actions/upload-artifact@v1
+      with:
+        name: app
+        path: app/build/outputs/apk/debug/app-debug.apk
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
