--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,13 +13,13 @@ phases:
   pre_build:
     commands:
       - echo Installing dependencies...
-      - yarn
+      - npm install
   build:
     commands:
       - echo Building...
-      - yarn build
+      - npm run build:prod
 artifacts:
   files:
     - "**/*"
   discard-paths: no
-  base-directory: build
+  base-directory: www
