--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,11 @@ phases:
       - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
       - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
       - apt install --no-install-recommends yarn
+
+      - name: Setup Ionic
+        # You may pin to the exact commit or the version.
+        # uses: coturiv/setup-ionic@f2df4aec71522c35f441b19d5b8c81c2440076f6
+        uses: coturiv/setup-ionic@v1.0.4
   pre_build:
     commands:
       - echo Installing dependencies...
@@ -22,4 +27,4 @@ artifacts:
   files:
     - "**/*"
   discard-paths: no
-  base-directory: www
+  base-directory: build
