feat: add projects page to app

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       - echo Building...
-      - npm run build:prod
+      - CI=false npm run build:prod
 artifacts:
   files:
     - "**/*"
