--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "jsx": "react-jsx",
     "noImplicitAny": false,
     "noImplicitThis": false,
+    "strictNullChecks": false
   },
   "include": [
     "src"
