--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@capacitor/core": "2.4.7",
     "@ionic/react": "^5.5.0",
     "@ionic/react-router": "^5.5.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -20,10 +21,12 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-wavify": "^1.5.2",
+    "redux": "^4.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
@@ -66,7 +69,8 @@
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.7",
-    "@ionic/lab": "3.2.10"
+    "@ionic/lab": "3.2.10",
+    "@types/react-redux": "^7.1.16"
   },
   "description": "An Ionic project"
 }
